# TheBombSquad.github.io

./: .gitignore  Cargo.toml  README.md  out.html
docs/: index.html  posts.html
docs/posts/: 20251103.html  CLOCK.html  about.html  clock.html  projects.html  resume.html  template.html  test2.html
docs/posts/projects/: b2smb2.html  rolledout.html  rolledout2.html
docs/style/: custom-style.css
docs/tags/: retrocomputing.html  reverse-engineering.html  tag1.html  tag2.html  tag3.html
posts/: 20251103.md  CLOCK.MD  about.md  projects.md  resume.md  template.md  test2.md
posts/projects/: b2smb2.md  rolledout.md  rolledout2.md
src/: main.rs
src/elements/: base.rs  common.rs  home.rs  mod.rs  navbar.rs  post.rs  post_listing.rs
templates/: base.html  home.html  navbar.html  post-body.html  post-header.html  post-listing.html  post-preview.html  post.html
