[package]
name = "portfolio_website"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.15.4"
markdown = "1.0.0"
chrono = "0.4.43"
anyhow = "1.0.100"
gray_matter = "0.3.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
const_format = "0.2.35"